Update flush file navigation to match updates macros documenetation

--- a/docs/guides/shell_commands/flush.mdx
+++ b/docs/guides/shell_commands/flush.mdx
@@ -10,7 +10,8 @@ Flush shell contents to shell.txt.
 
 Then, navigate to hackmud config directory.
 
-> Try using running ((%C#dir%)) and going two folders up. Or navigating to:
+> Run ((%C#dir%)) and go two folders up. Or navigate to:
+>
 > > Windows - `C:\Users\USERNAME\AppData\Roaming\hackmud`\
 > > macOS - `~/.config/hackmud`\
 > > Linux - Either `~/.config/hackmud` or the game folder.
