Reworded binm.at description.

--- a/docs/guides/binmat.mdx
+++ b/docs/guides/binmat.mdx
@@ -14,7 +14,7 @@ The game has 2 teams, attackers and defenders. If the attackers win, the defendi
 
 The rules for BINMAT can be found [here](https://github.com/comcode-org/binmat_rules).
 
-A way to play BINMAT out-of-game with no stakes is [binm.at](https://binm.at/).
+A way to play BINMAT recreationally is [binm.at](https://binm.at/).
 
 {/* auto-generated list of category doc links: */}
 import DocCardList from "@theme/DocCardList";
