--- a/docs/guides/binmat/starting.mdx
+++ b/docs/guides/binmat/starting.mdx
@@ -2,3 +2,27 @@
 title: Starting a Game
 description: "What's needed to start a game."
 ---
+
+## When does a game start?
+
+A game of BINMAT begins once an attacking player solves all locks on a system, and both players have the nessecary ante.
+
+When the above conditions are met, the ante is sent from the defender to trust, and then the attacker to trust, and a game of BINMAT starts between the attacker and defender.
+
+If the defender cannot pay the ante, no game is started, and their system is breached.
+
+If the attacker cannot pay the ante, they do not join the created game.
+
+Do note that an attacker cannot start a game against a system of a higher tier.
+
+## The ante/pot
+
+The ante needed for BINMAT is based on the tier of the defending system.
+
+| Tier | BINMAT Ante |
+| :--: | :---------: |
+|  0   |     N/A     |
+|  1   |  ((8MGC))   |
+|  2   | ((512MGC))  |
+|  3   |  ((8BGC))   |
+|  4   |  ((32BGC))  |
